# adventofcode

./: .gitignore
day1/: main.cpp
day2/: go.mod  ids.txt  main  main.go
day3/: main.kt
day3/src/: Main.kt
day4/: day4.sln
day4/day4/: Program.cs  RollStorage.cs
day5/: README.md  main.ts  package.json
day6/: day6.sln
day6/day6/: FileParser.cs  Offset.cs  Operation.cs  Problem.cs  Program.cs
day7/: CMakeLists.txt
day7/src/: main.cpp
